--- a/TestNGTest/test-output/old/SeleniumTests/methods-alphabetical.html
+++ b/TestNGTest/test-output/old/SeleniumTests/methods-alphabetical.html
@@ -1,14 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>SeleniumTests</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a37f89">  <td>18/09/23 20:24:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AlertPageTest.alertTestMessage()[pri:0, instance:tests.AlertPageTest@39cb7ee5]">alertTestMessage</td> 
-  <td>main@27469614</td>   <td></td> </tr>
-<tr bgcolor="c1b980">  <td>18/09/23 20:23:52</td>   <td>-23341</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CheckboxFormTest.launchBrowser()[pri:0, instance:tests.CheckboxFormTest@6e2404a0]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@27469614</td>   <td></td> </tr>
-<tr bgcolor="a37f89">  <td>18/09/23 20:24:10</td>   <td>-4855</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AlertPageTest.launchBrowser()[pri:0, instance:tests.AlertPageTest@39cb7ee5]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@27469614</td>   <td></td> </tr>
-<tr bgcolor="c1b980">  <td>18/09/23 20:23:57</td>   <td>-18070</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckboxFormTest.multipleCheckboxTest()[pri:0, instance:tests.CheckboxFormTest@6e2404a0]">multipleCheckboxTest</td> 
-  <td>main@27469614</td>   <td></td> </tr>
-<tr bgcolor="c1b980">  <td>18/09/23 20:24:04</td>   <td>-11193</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckboxFormTest.singleCheckboxTest()[pri:0, instance:tests.CheckboxFormTest@6e2404a0]">singleCheckboxTest</td> 
-  <td>main@27469614</td>   <td></td> </tr>
+<tr bgcolor="a39a71">  <td>18/10/18 23:06:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AlertPageTest.alertTestMessage()[pri:0, instance:tests.AlertPageTest@cd7e6ef]">alertTestMessage</td> 
+  <td>main@800171212</td>   <td></td> </tr>
+<tr bgcolor="9d8bed">  <td>18/10/18 23:07:30</td>   <td>33243</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BMIPageTest.bmiCalculatorTest()[pri:0, instance:tests.BMIPageTest@73aeff7d]">bmiCalculatorTest</td> 
+  <td>main@800171212</td>   <td></td> </tr>
+<tr bgcolor="89799f">  <td>18/10/18 23:07:06</td>   <td>8684</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DragAndDropTest.dragAndDropTest()[pri:0, instance:tests.DragAndDropTest@3bd8928e]">dragAndDropTest</td> 
+  <td>main@800171212</td>   <td></td> </tr>
+<tr bgcolor="a18161">  <td>18/10/18 23:07:41</td>   <td>43538</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FileUploadTest.fileUploadTest()[pri:0, instance:tests.FileUploadTest@45f676cb]">fileUploadTest</td> 
+  <td>main@800171212</td>   <td></td> </tr>
+<tr bgcolor="70cf92">  <td>18/10/18 23:06:12</td>   <td>-45067</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SimpleFormTest.launchBrowser()[pri:0, instance:tests.SimpleFormTest@bc7a22a]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@800171212</td>   <td></td> </tr>
+<tr bgcolor="8fc7db">  <td>18/10/18 23:06:33</td>   <td>-23750</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CheckboxFormTest.launchBrowser()[pri:0, instance:tests.CheckboxFormTest@13fd3d8]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@800171212</td>   <td></td> </tr>
+<tr bgcolor="a39a71">  <td>18/10/18 23:06:53</td>   <td>-4608</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AlertPageTest.launchBrowser()[pri:0, instance:tests.AlertPageTest@cd7e6ef]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@800171212</td>   <td></td> </tr>
+<tr bgcolor="9d8bed">  <td>18/10/18 23:07:22</td>   <td>24743</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BMIPageTest.launchBrowser()[pri:0, instance:tests.BMIPageTest@73aeff7d]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@800171212</td>   <td></td> </tr>
+<tr bgcolor="a18161">  <td>18/10/18 23:07:36</td>   <td>39019</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;FileUploadTest.launchBrowser()[pri:0, instance:tests.FileUploadTest@45f676cb]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@800171212</td>   <td></td> </tr>
+<tr bgcolor="8fc7db">  <td>18/10/18 23:06:38</td>   <td>-19243</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckboxFormTest.multipleCheckboxTest()[pri:0, instance:tests.CheckboxFormTest@13fd3d8]">multipleCheckboxTest</td> 
+  <td>main@800171212</td>   <td></td> </tr>
+<tr bgcolor="70cf92">  <td>18/10/18 23:06:26</td>   <td>-31052</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimpleFormTest.showMessageTest()[pri:0, instance:tests.SimpleFormTest@bc7a22a]">showMessageTest</td> 
+  <td>main@800171212</td>   <td></td> </tr>
+<tr bgcolor="8fc7db">  <td>18/10/18 23:06:45</td>   <td>-11739</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckboxFormTest.singleCheckboxTest()[pri:0, instance:tests.CheckboxFormTest@13fd3d8]">singleCheckboxTest</td> 
+  <td>main@800171212</td>   <td></td> </tr>
 </table>
