--- a/TestNGTest/test-output/old/SeleniumTests/toc.html
+++ b/TestNGTest/test-output/old/SeleniumTests/toc.html
@@ -8,12 +8,12 @@
 <h3><p align="center">Results for<br/><em>SeleniumTests</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
-<td>5 tests</td>
-<td><a target='mainFrame' href='classes.html'>2 classes</a></td>
-<td>3 methods:<br/>
+<td>6 tests</td>
+<td><a target='mainFrame' href='classes.html'>6 classes</a></td>
+<td>7 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
-&nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (4)</a></td>
+&nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (1)</a></td>
 </tr>
 <tr>
 <td><a target='mainFrame' href='groups.html'>0 group</a></td>
@@ -22,24 +22,8 @@
 </tr></table>
 <table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>BMIPageTest (0/0/0)</td><td valign='top' align='right'>
-  <a href='BMIPageTest.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-failed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>DragAndDropTest (0/0/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>DragAndDropTest (0/1/0)</td><td valign='top' align='right'>
   <a href='DragAndDropTest.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-failed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>SimpleFormTest (0/0/0)</td><td valign='top' align='right'>
-  <a href='SimpleFormTest.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
@@ -54,8 +38,32 @@
 
 <table width='100%' class='test-passed'>
 <tr><td>
+<table style='width: 100%'><tr><td valign='top'>BMIPageTest (1/0/0)</td><td valign='top' align='right'>
+  <a href='BMIPageTest.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
 <table style='width: 100%'><tr><td valign='top'>CheckboxFormTest (2/0/0)</td><td valign='top' align='right'>
   <a href='CheckboxFormTest.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>FileUploadTest (1/0/0)</td><td valign='top' align='right'>
+  <a href='FileUploadTest.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>SimpleFormTest (1/0/0)</td><td valign='top' align='right'>
+  <a href='SimpleFormTest.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
